--- a/index.html
+++ b/index.html
@@ -12,145 +12,116 @@
 </head>
 
 <body>
-  <header>
-    <!-- Barra de navegação principal -->
-    <nav class="navbar">
+  <nav class="navbar">
+    <a href="#intro" class="nav-logo">Thiago Paz</a>
+    <div class="nav-links">
+      <a href="#intro">Início</a>
+      <a href="#quem-sou-eu">Sobre</a>
+      <a href="#formacao">Formação</a>
+      <a href="#projects">Projetos</a>
+      <a href="#contato">Contato</a>
+    </div>
+  </nav>
+
+  <main class="container" id="intro">
+    <section class="hero">
+      <img src="img/photo.jpg" alt="Foto de Thiago Paz" class="hero-avatar" />
+      <h1 class="hero-title">Thiago Paz</h1>
+      <h2 class="hero-subtitle">Desenvolvedor Back-end Junior</h2>
+      <div class="hero-social">
+        <a href="https://www.linkedin.com/in/thiagopazba/" target="_blank" aria-label="LinkedIn"><img
+            src="https://img.icons8.com/?size=100&id=447&format=png&color=ffffff" alt="LinkedIn" /></a>
+        <a href="https://github.com/azpthiago" target="_blank" aria-label="GitHub"><img
+            src="https://img.icons8.com/?size=100&id=62856&format=png&color=ffffff" alt="GitHub" /></a>
+      </div>
+    </section>
+
+    <section id="quem-sou-eu" class="card">
+      <h3>Sobre mim</h3>
+      <p><span id="unmuted-text">Olá, sou Thiago Paz,</span> desenvolvedor back-end apaixonado por tecnologia, formado
+        em Desenvolvimento Sistemas pelo SENAI Alagoinhas e <span id="unmuted-text">atualmente atuando no SENAI
+          CIMATEC.</span> Tenho experiência com Node.js, TypeScript e Java (Spring), além de participação em projetos de
+        inteligência artificial e DevOps (Docker e Kubernetes).
+      </p>
+      <p>Já atuei como monitor de Lógica de Programação e ministrei palestras sobre tecnologia e acessibilidade.</p>
+    </section>
+
+    <section id="formacao" class="card">
+      <h3>Formação</h3>
       <ul>
-        <li><a href="#intro">Inicio</a></li>
-        <li><a href="#quem-sou-eu">Quem sou eu</a></li>
-        <li><a href="#formacao">Formação profissional</a></li>
-        <li><a href="#projects">Meus projetos</a></li>
-        <li><a href="#contato">Contato</a></li>
+        <li>Desenvolvimento de Sistemas - SENAI Alagoinhas</li>
+        <li>Back-end Java - Oracle Next Education & Alura</li>
+        <li>Bacharel em Engenharia de Software - UNINTER (2025-2029)</li>
       </ul>
-    </nav>
-  </header>
+    </section>
 
-  <main class="content">
-    <section id="intro" class="intro">
-      <div class="intro-content">
-        <img src="img/photo.jpg" alt="Foto de Tiago Palmeira" class="profile-pic" />
-        <div class="intro-text">
-          <h1>Thiago Paz</h1>
-          <h2>Desenvolvedor Back-end Junior</h2>
+    <section id="carreira" class="card carreira-card">
+      <h3 class="carreira-title">Carreira</h3>
+      <div class="carreira-item">
+        <div class="carreira-cargo">Estagiário em Desenvolvimento de Software</div>
+        <div class="carreira-empresa-local">
+          <span class="carreira-empresa"><a href="https://www.senaicimatec.com.br/">SENAI CIMATEC</a></span>
+          <span class="carreira-local">• Salvador, Bahia</span>
         </div>
+        <div class="carreira-periodo">Dez 2024 — Presente <span class="carreira-duracao">• 8 meses</span></div>
+      </div>
+      <div class="carreira-item">
+        <div class="carreira-cargo">Monitor de Lógica de Programação</div>
+        <div class="carreira-empresa-local">
+          <span class="carreira-empresa"><a href="https://www.instagram.com/senaialagoinhas/">SENAI
+              Alagoinhas</a></span>
+        </div>
+        <div class="carreira-periodo">2024</div>
+      </div>
+      <div class="carreira-item">
+        <div class="carreira-cargo">Monitor de Acessibilidade em Informática Básica</div>
+        <div class="carreira-empresa-local">
+          <span class="carreira-empresa"><a href="https://www.instagram.com/senaialagoinhas/">SENAI
+              Alagoinhas</a></span>
+        </div>
+        <div class="carreira-periodo">2024</div>
       </div>
     </section>
 
-    <!-- Seção "Quem sou eu" -->
-    <section id="quem-sou-eu" class="section">
-      <h3>Quem sou eu?</h3>
-      <p>
-        Olá, sou Thiago Paz, formado no curso tecnico de Desenvolvimento de Sistemas pelo SENAI Alagoinhas, atuo como
-        desenvolvedor no SENAI CIMATEC, onde
-        desenvolvo soluções web utilizando tecnologias de ponta, inteligência artificial e devops para big techs
-        nacionais e
-        internacionais.
-      </p><br>
-      <p>
-        Dentro do desenvolvimento web possuo experiencia no ecossistema Node (Java Script e Type Script) e Java (Spring
-        Framework), tendo desenvolvido diversos projetos dentro das duas linguagens.
-      </p><br>
-      <p>
-        Atuei como monitor durante 2 semestres na matéria de Lógica de programação, além de monitoria focada em
-        acessibilidade dentro do curso de informática básica. Em conjunto a isto palestrei em eventos no SENAI
-        Alagoinhas e outras empresas da região.
-      </p>
-    </section>
-
-    <!-- Seção de formação profissional -->
-    <section class="section" id="formacao">
-      <h3>Formação profissional</h3>
-      <p>
-        Sou formado em Desenvolvimento de Sistemas pelo SENAI Alagoinhas, uma instituição com grande renome na formação
-        de profissionais em diversas áreas técnicas.
-      </p><br>
-
-      <p>
-        Possuo formação em desenvolvimento back-end Java no projeto Oracle Next Education, em parceria com a Alura, onde
-        desenvolvi diversos projetos utilizando a linguagem Java em conjunto com o FrameWork Spring praticando diversos
-        conceitos, do básico ao avançado da linguagem.
-      </p><br>
-
-
-      <p>
-        Atualmente, curso Bacharel em Engenharia de software pela UNINTER, iniciado no período do 2025.1 e com previsão
-        de finalização em 2029.2.
-      </p>
-    </section>
-
-    <!-- Seção de projetos -->
-    <section id="projects" class="section">
-      <h3>Meus projetos:</h3>
-      <p>
-        Confira abaixo alguns dos projetos que dediquei meu tempo livre para estudar e aprender sobre as tecnologias
-        mencionadas.
-      </p>
-
+    <section id="projects" class="card">
+      <h3>Projetos</h3>
       <div class="projects">
-        <!-- Projeto Ovo Perfeito -->
-        <a href="https://github.com/azpthiago/cartao-cli" class="project-card">
-          <h4>Cartão CLi</h4>
-          <p>Projeto em NodeJS para desenvolvimento de um cartão de visitas através de CLI</p>
+        <a href="https://github.com/azpthiago/cartao-cli" class="project-card" target="_blank">
+          <span class="project-title">Cartão CLi</span>
+          <span class="project-desc">Cartão de visitas em Node.js via CLI</span>
         </a>
-
-        <!-- Projeto MamoothDown -->
-        <a href="hhttps://github.com/azpthiago/forumhub" class="project-card">
-          <h4>ForumHUB</h4>
-          <p>API Restful em Java para criação de um forum</p>
+        <a href="https://github.com/azpthiago/forumhub" class="project-card" target="_blank">
+          <span class="project-title">ForumHUB</span>
+          <span class="project-desc">API Restful em Java para fórum</span>
         </a>
-
-        <!-- Projeto Leitor de Códigos -->
-        <a href=https://github.com/azpthiago/gamepillarsofcreation class="project-card">
-          <h4>Pillars Of Creation</h4>
-          <p>Game desenvolvido utilizando C para a disciplina de Logica de Programação no curso de Desenvolvimento de
-            Sistemas no SENAI-BA.</p>
+        <a href="https://github.com/azpthiago/gamepillarsofcreation" class="project-card" target="_blank">
+          <span class="project-title">Pillars Of Creation</span>
+          <span class="project-desc">Game de RPG de turno em C para disciplina de Lógica de Programação</span>
         </a>
       </div>
     </section>
 
-    <!-- Seção de contato -->
-    <section id="contato" class="section">
-      <h3>Se interessou pelo meu trabalho? Fale comigo!</h3>
-      <form class="form">
-        <label for="nome">Como posso te chamar?</label>
-        <input type="text" id="nome" name="nome" placeholder="Digite seu nome." />
-
-        <label for="meio">Qual o melhor meio de comunicação para você?</label>
-        <select id="meio-contato" name="meio-contato">
+    <section id="contato" class="card">
+      <h3>Contato</h3>
+      <form class="form" id="contato-form">
+        <input type="text" id="nome" name="nome" placeholder="Seu nome" required />
+        <select id="meio-contato" name="meio-contato" required>
           <option value="whatsapp">WhatsApp</option>
           <option value="email">E-mail</option>
           <option value="telefone">Ligação</option>
         </select>
-
-        <label for="contato" id="label-contato">Insira seu contato</label>
-        <input type="text" id="contato" name="contato" placeholder="" />
-
-        <label for="mensagem">Sua mensagem:</label>
-        <textarea id="mensagem" name="mensagem" rows="5"
-          placeholder="Digite o que deseja e em breve entraremos em contato."></textarea>
-
+        <input type="text" id="contato" name="contato" placeholder="Contato" required />
+        <textarea id="mensagem" name="mensagem" rows="4" placeholder="Sua mensagem" required></textarea>
         <button type="submit" class="button">Enviar</button>
       </form>
+      <div id="form-success" class="form-success">Mensagem enviada com sucesso!</div>
+      <div id="toast-success" class="toast-success">Mensagem enviada com sucesso!</div>
+      <p class="formspree-info">O envio é feito via <a href='https://formspree.io' target='_blank'
+          class="formspree-link">Formspree</a>.</p>
     </section>
 
-    <!-- Seção de redes sociais -->
-    <section class="section">
-      <h3>Me siga nas minhas redes:</h3>
-      <a class="linkedin" href="https://www.linkedin.com/in/thiagopazba/" target="_blank" aria-label="LinkedIn">
-        <img src="https://img.icons8.com/?size=100&id=447&format=png&color=ffffff" alt="link para o linkedin" />
-      </a>
-      <a class="linkedin" href="https://github.com/azpthiago" target="_blank" aria-label="GitHub">
-        <img src="https://img.icons8.com/?size=100&id=62856&format=png&color=ffffff" alt="link para o github" />
-      </a>
-    </section>
-
-    <br />
-
-    <!-- Rodapé -->
     <footer>
-      <section>
-        Todos os direitos reservados - Thiago Vinicius Silva Paz
-      </section>
+      <span>© 2025 Thiago Paz</span>
     </footer>
   </main>
 
