--- a/index.html
+++ b/index.html
@@ -120,15 +120,19 @@
     <section id="contato" class="card">
       <h3>Contato</h3>
       <!-- Formulário de contato: nome, meio de contato, mensagem -->
-      <form class="form" id="contato-form">
-        <input type="text" id="nome" name="nome" placeholder="Seu nome" required />
-        <select id="meio-contato" name="meio-contato" required>
+      <!-- Honeypot: campo oculto para bloquear bots -->
+      <form class="form" id="contato-form" autocomplete="off">
+        <input type="text" name="website" id="website" style="display:none" tabindex="-1" autocomplete="off"
+          aria-hidden="true" />
+        <input type="text" id="nome" name="nome" placeholder="Seu nome" required autocomplete="off" />
+        <select id="meio-contato" name="meio-contato" required autocomplete="off">
           <option value="whatsapp">WhatsApp</option>
           <option value="email">E-mail</option>
           <option value="telefone">Ligação</option>
         </select>
-        <input type="text" id="contato" name="contato" placeholder="Contato" required />
-        <textarea id="mensagem" name="mensagem" rows="4" placeholder="Sua mensagem" required></textarea>
+        <input type="text" id="contato" name="contato" placeholder="Contato" required autocomplete="off" />
+        <textarea id="mensagem" name="mensagem" rows="4" placeholder="Sua mensagem" required
+          autocomplete="off"></textarea>
         <button type="submit" class="button">Enviar</button>
       </form>
       <!-- Mensagens de sucesso (inline e toast) -->
