fix: aba de carreiras e favicon

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="./style/style.css" />
   <!-- Fonte Poppins do Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="/img/favicon-32x32.png">
 </head>
 
 <body>
@@ -82,16 +83,16 @@
       <div class="carreira-item">
         <div class="carreira-cargo">Monitor de Lógica de Programação</div>
         <div class="carreira-empresa-local">
-          <span class="carreira-empresa"><a href="https://www.instagram.com/senaialagoinhas/">SENAI
-              Alagoinhas</a></span>
+          <span class="carreira-empresa"><a href="https://www.instagram.com/senaialagoinhas/">SENAI </a></span>
+          <span class="carreira-local">• Alagoinhas, Bahia</span>
         </div>
         <div class="carreira-periodo">2024</div>
       </div>
       <div class="carreira-item">
         <div class="carreira-cargo">Monitor de Acessibilidade em Informática Básica</div>
         <div class="carreira-empresa-local">
-          <span class="carreira-empresa"><a href="https://www.instagram.com/senaialagoinhas/">SENAI
-              Alagoinhas</a></span>
+          <span class="carreira-empresa"><a href="https://www.instagram.com/senaialagoinhas/">SENAI </a></span>
+          <span class="carreira-local">• Alagoinhas, Bahia</span>
         </div>
         <div class="carreira-periodo">2024</div>
       </div>
