fix: ajustes finais de estilização.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <a href="#intro">Início</a>
       <a href="#quem-sou-eu">Sobre</a>
       <a href="#formacao">Formação</a>
+      <a href="#carreira">Carreira</a>
       <a href="#projects">Projetos</a>
       <a href="#contato">Contato</a>
     </div>
@@ -36,111 +37,142 @@
   <!-- Conteúdo principal do portfólio -->
   <main class="container" id="intro">
     <!-- Seção de apresentação (hero) com foto, nome, título e redes sociais -->
-    <section class="hero">
-      <img src="img/photo.jpg" alt="Foto de Thiago Paz" class="hero-avatar" />
-      <h1 class="hero-title">Thiago Paz</h1>
-      <h2 class="hero-subtitle">Desenvolvedor Back-end Junior</h2>
-      <div class="hero-social">
-        <a href="https://www.linkedin.com/in/thiagopazba/" target="_blank" aria-label="LinkedIn"><img
-            src="https://img.icons8.com/?size=100&id=447&format=png&color=ffffff" alt="LinkedIn" /></a>
-        <a href="https://github.com/azpthiago" target="_blank" aria-label="GitHub"><img
-            src="https://img.icons8.com/?size=100&id=62856&format=png&color=ffffff" alt="GitHub" /></a>
+    <section class="section-full">
+      <div class="hero">
+        <img src="img/photo.jpg" alt="Foto de Thiago Paz" class="hero-avatar" />
+        <h1 class="hero-title">Thiago Paz</h1>
+        <h2 class="hero-subtitle">Desenvolvedor Back-end Junior</h2>
+        <div class="hero-social">
+          <a href="https://www.linkedin.com/in/thiagopazba/" target="_blank" aria-label="LinkedIn"><img
+              src="https://img.icons8.com/?size=100&id=447&format=png&color=ffffff" alt="LinkedIn" /></a>
+          <a href="https://github.com/azpthiago" target="_blank" aria-label="GitHub"><img
+              src="https://img.icons8.com/?size=100&id=62856&format=png&color=ffffff" alt="GitHub" /></a>
+        </div>
       </div>
     </section>
 
     <!-- Seção Sobre mim -->
-    <section id="quem-sou-eu" class="card">
-      <h3>Sobre mim</h3>
-      <p><span id="unmuted-text">Olá, sou Thiago Paz,</span> desenvolvedor back-end apaixonado por tecnologia, formado
-        em Desenvolvimento Sistemas pelo SENAI Alagoinhas e <span id="unmuted-text">atualmente atuando no SENAI
-          CIMATEC.</span> Tenho experiência com Node.js, TypeScript e Java (Spring), além de participação em projetos de
-        inteligência artificial e DevOps (Docker e Kubernetes).
-      </p>
-      <p>Já atuei como monitor de Lógica de Programação e ministrei palestras sobre tecnologia e acessibilidade.</p>
+    <section id="quem-sou-eu" class="section-full">
+      <div class="card">
+        <h3>Sobre mim</h3>
+        <p><span id="unmuted-text">Olá, sou Thiago Paz,</span> desenvolvedor back-end apaixonado por tecnologia, formado
+          em Desenvolvimento Sistemas pelo SENAI Alagoinhas e <span id="unmuted-text">atualmente atuando no SENAI
+            CIMATEC.</span> Tenho experiência com Node.js, TypeScript e Java (Spring), além de participação em projetos
+          de
+          inteligência artificial e DevOps (Docker e Kubernetes).
+        </p>
+        <p>Já atuei como monitor de Lógica de Programação e ministrei palestras sobre tecnologia e acessibilidade.</p>
+      </div>
     </section>
 
     <!-- Seção Formação acadêmica -->
-    <section id="formacao" class="card">
-      <h3>Formação</h3>
-      <ul>
-        <li>Desenvolvimento de Sistemas - SENAI Alagoinhas</li>
-        <li>Back-end Java - Oracle Next Education & Alura</li>
-        <li>Bacharel em Engenharia de Software - UNINTER (2025-2029)</li>
-      </ul>
+    <section id="formacao" class="section-full">
+      <div class="card carreira-card">
+        <h3 class="carreira-title">Formação</h3>
+        <div class="carreira-item">
+          <div class="carreira-cargo">Desenvolvimento de Sistemas</div>
+          <div class="carreira-empresa-local">
+            <span class="carreira-empresa"><a href="https://www.senaialagoinhas.com.br/">SENAI Alagoinhas</a></span>
+            <span class="carreira-local">- Jan 2023 - Dez 2024</span>
+          </div>
+        </div>
+        <div class="carreira-item">
+          <div class="carreira-cargo">Back-end Java</div>
+          <div class="carreira-empresa-local">
+            <span class="carreira-empresa"><a href="https://www.oracle.com/br/education/oracle-next-education/">Oracle
+                Next
+                Education</a></span>
+            <span class="carreira-local">- Fev 2024 - Agosto 2024</span>
+          </div>
+        </div>
+        <div class="carreira-item">
+          <div class="carreira-cargo">Bacharel em Engenharia de Software</div>
+          <div class="carreira-empresa-local">
+            <span class="carreira-empresa"><a href="https://www.uninter.com/">UNINTER</a></span>
+            <span class="carreira-local">- Jan 2025 - Dez 2029</span>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- Seção Carreira profissional, com cargos e experiências -->
-    <section id="carreira" class="card carreira-card">
-      <h3 class="carreira-title">Carreira</h3>
-      <div class="carreira-item">
-        <div class="carreira-cargo">Estagiário em Desenvolvimento de Software</div>
-        <div class="carreira-empresa-local">
-          <span class="carreira-empresa"><a href="https://www.senaicimatec.com.br/">SENAI CIMATEC</a></span>
-          <span class="carreira-local">• Salvador, Bahia</span>
+    <section id="carreira" class="section-full">
+      <div class="card">
+        <h3 class="carreira-title">Carreira</h3>
+        <div class="carreira-item">
+          <div class="carreira-cargo">Estagiário em Desenvolvimento de Software</div>
+          <div class="carreira-empresa-local">
+            <span class="carreira-empresa"><a href="https://www.senaicimatec.com.br/">SENAI CIMATEC</a></span>
+            <span class="carreira-local">• Salvador, Bahia</span>
+          </div>
+          <div class="carreira-periodo">Dez 2024 — Presente <span class="carreira-duracao">• 8 meses</span></div>
         </div>
-        <div class="carreira-periodo">Dez 2024 — Presente <span class="carreira-duracao">• 8 meses</span></div>
-      </div>
-      <div class="carreira-item">
-        <div class="carreira-cargo">Monitor de Lógica de Programação</div>
-        <div class="carreira-empresa-local">
-          <span class="carreira-empresa"><a href="https://www.instagram.com/senaialagoinhas/">SENAI </a></span>
-          <span class="carreira-local">• Alagoinhas, Bahia</span>
+        <div class="carreira-item">
+          <div class="carreira-cargo">Monitor de Lógica de Programação</div>
+          <div class="carreira-empresa-local">
+            <span class="carreira-empresa"><a href="https://www.instagram.com/senaialagoinhas/">SENAI </a></span>
+            <span class="carreira-local">• Alagoinhas, Bahia</span>
+          </div>
+          <div class="carreira-periodo">2024</div>
         </div>
-        <div class="carreira-periodo">2024</div>
-      </div>
-      <div class="carreira-item">
-        <div class="carreira-cargo">Monitor de Acessibilidade em Informática Básica</div>
-        <div class="carreira-empresa-local">
-          <span class="carreira-empresa"><a href="https://www.instagram.com/senaialagoinhas/">SENAI </a></span>
-          <span class="carreira-local">• Alagoinhas, Bahia</span>
+        <div class="carreira-item">
+          <div class="carreira-cargo">Monitor de Acessibilidade em Informática Básica</div>
+          <div class="carreira-empresa-local">
+            <span class="carreira-empresa"><a href="https://www.instagram.com/senaialagoinhas/">SENAI </a></span>
+            <span class="carreira-local">• Alagoinhas, Bahia</span>
+          </div>
+          <div class="carreira-periodo">2024</div>
         </div>
-        <div class="carreira-periodo">2024</div>
       </div>
     </section>
 
     <!-- Seção Projetos pessoais, com links para repositórios -->
-    <section id="projects" class="card">
-      <h3>Projetos</h3>
-      <div class="projects">
-        <a href="https://github.com/azpthiago/cartao-cli" class="project-card" target="_blank">
-          <span class="project-title">Cartão CLi</span>
-          <span class="project-desc">Cartão de visitas em Node.js via CLI</span>
-        </a>
-        <a href="https://github.com/azpthiago/forumhub" class="project-card" target="_blank">
-          <span class="project-title">ForumHUB</span>
-          <span class="project-desc">API Restful em Java para fórum</span>
-        </a>
-        <a href="https://github.com/azpthiago/gamepillarsofcreation" class="project-card" target="_blank">
-          <span class="project-title">Pillars Of Creation</span>
-          <span class="project-desc">Game de RPG de turno em C para disciplina de Lógica de Programação</span>
-        </a>
+    <section id="projects" class="section-full">
+      <div class="card">
+        <h3>Projetos</h3>
+        <div class="projects">
+          <a href="https://github.com/azpthiago/cartao-cli" class="project-card" target="_blank">
+            <span class="project-title">Cartão CLi</span>
+            <span class="project-desc">Cartão de visitas em Node.js via CLI</span>
+          </a>
+          <a href="https://github.com/azpthiago/forumhub" class="project-card" target="_blank">
+            <span class="project-title">ForumHUB</span>
+            <span class="project-desc">API Restful em Java para fórum</span>
+          </a>
+          <a href="https://github.com/azpthiago/gamepillarsofcreation" class="project-card" target="_blank">
+            <span class="project-title">Pillars Of Creation</span>
+            <span class="project-desc">Game de RPG de turno em C para disciplina de Lógica de Programação</span>
+          </a>
+        </div>
       </div>
     </section>
 
     <!-- Seção de contato, com formulário integrado ao Formspree -->
-    <section id="contato" class="card">
-      <h3>Contato</h3>
-      <!-- Formulário de contato: nome, meio de contato, mensagem -->
-      <!-- Honeypot: campo oculto para bloquear bots -->
-      <form class="form" id="contato-form" autocomplete="off">
-        <input type="text" name="website" id="website" style="display:none" tabindex="-1" autocomplete="off"
-          aria-hidden="true" />
-        <input type="text" id="nome" name="nome" placeholder="Seu nome" required autocomplete="off" />
-        <select id="meio-contato" name="meio-contato" required autocomplete="off">
-          <option value="whatsapp">WhatsApp</option>
-          <option value="email">E-mail</option>
-          <option value="telefone">Ligação</option>
-        </select>
-        <input type="text" id="contato" name="contato" placeholder="Contato" required autocomplete="off" />
-        <textarea id="mensagem" name="mensagem" rows="4" placeholder="Sua mensagem" required
-          autocomplete="off"></textarea>
-        <button type="submit" class="button">Enviar</button>
-      </form>
-      <!-- Mensagens de sucesso (inline e toast) -->
-      <div id="form-success" class="form-success">Mensagem enviada com sucesso!</div>
-      <div id="toast-success" class="toast-success">Mensagem enviada com sucesso!</div>
-      <p class="formspree-info">O envio é feito via <a href='https://formspree.io' target='_blank'
-          class="formspree-link">Formspree</a>.</p>
+    <section id="contato" class="section-full">
+      <div class="card">
+        <h3>Contato</h3>
+        <!-- Formulário de contato: nome, meio de contato, mensagem -->
+        <!-- Honeypot: campo oculto para bloquear bots -->
+        <form class="form" id="contato-form" autocomplete="off">
+          <input type="text" name="website" id="website" style="display:none" tabindex="-1" autocomplete="off"
+            aria-hidden="true" />
+          <input type="text" id="nome" name="nome" placeholder="Seu nome" required autocomplete="off" />
+          <select id="meio-contato" name="meio-contato" required autocomplete="off">
+            <option value="whatsapp">WhatsApp</option>
+            <option value="email">E-mail</option>
+            <option value="telefone">Ligação</option>
+          </select>
+          <input type="text" id="contato" name="contato" placeholder="Contato" required autocomplete="off" />
+          <textarea id="mensagem" name="mensagem" rows="4" placeholder="Sua mensagem" required
+            autocomplete="off"></textarea>
+          <button type="submit" class="button">Enviar</button>
+        </form>
+        <!-- Mensagens de sucesso (inline e toast) -->
+        <div id="form-success" class="form-success">Mensagem enviada com sucesso!</div>
+        <div id="toast-success" class="toast-success">Mensagem enviada com sucesso!</div>
+        <p class="formspree-info">O envio é feito via <a href='https://formspree.io' target='_blank'
+            class="formspree-link">Formspree</a>.</p>
+      </div>
     </section>
 
     <!-- Rodapé -->
